# gbilling-client

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.in  gbilling-client.desktop.in  gitpush
data/: Makefile  Makefile.am  Makefile.in
debian/: changelog  control  copyright  depends  depends.build  watch
pixmaps/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callback.c  callback.h  client.c  client.h  dev.h  gbilling-client  gui.c  gui.h  main.c  main.h  setting.c  setting.h  version.h
ui/: Makefile  Makefile.am  Makefile.in  item.ui  login.ui  setting.ui  timer.ui
win32/: Makefile.win  gbilling-client.dev  gbilling-client.layout  gbilling-client_private.h  gbilling-client_private.rc
